# 2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  REUSE.toml  TODO.md  pyproject.toml
.beads/: config.yaml
docs/: demo.md  implementation.md  substrat.md  user_story.md
docs/design/: crash_recovery.md  cursor_agent.md  daemon.md  provider.md  review_pipeline.md  review_pipeline_purist_review.md  review_pipeline_review.md  session.md  tool_integration.md  wake.md  workspace.md
docs/design/providers/: cursor_agent.md  scripted.md
src/substrat/: __init__.py  __main__.py  daemon.py  model.py  orchestrator.py  persistence.py  rpc.py  scheduler.py
src/substrat/agent/: __init__.py  inbox.py  message.py  node.py  prompt.py  router.py  tools.py  tree.py
templates/: project.md  reviewer.md  root.md  worker.md
templates/scripts/: init-project.sh  init-root.sh
tests/: __init__.py  conftest.py  helpers.py
tests/fixtures/: mcp_add_server.py
tests/integration/: test_cursor_agent.py  test_cursor_bwrap.py  test_cursor_mcp_bwrap.py  test_cursor_rules_bwrap.py  test_daemon_e2e.py  test_daemon_eviction.py  test_daemon_mcp_e2e.py  test_daemon_rpc.py  test_scripted_e2e.py  test_substrat_mcp_e2e.py  test_tool_callbacks.py
tests/stress/: conftest.py  test_crash_fuzz.py  test_orch_crash_fuzz.py  test_orchestrator_fuzz.py  vfs.py
tests/unit/: test_agent_tree.py  test_bwrap.py  test_cli.py  test_cursor_agent.py  test_daemon.py  test_event_log.py  test_log_decorator.py  test_mcp_server.py  test_messaging.py  test_multiplexer.py  test_orchestrator.py  test_persistence.py  test_provider_base.py  test_provider_registry.py  test_recovery.py  test_rpc.py  test_scheduler.py  test_scripted_provider.py  test_session_model.py  test_session_store.py  test_shell_state.py  test_substrat_script.py  test_tools.py  test_workspace_mapping.py  test_workspace_model.py  test_workspace_resolve.py  test_workspace_store.py
(+22 files in other folders)
