[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "substrat"
version = "0.0.1"
description = "Agent orchestration framework."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pre-commit>=4.0",
    "ruff>=0.9",
]

[project.scripts]
substrat = "substrat.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/substrat"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that hit real APIs (skip by default, run with --run-e2e)",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
